// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the AccountDatasetsTabs component When it is rendered and team is admin Then matches the previous snapshot 1`] = `
<div>
  <div
    class="tabsBackground mb-0"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-12 col-sm-12"
      >
        <nav
          class="dataAccessTabs gray700-13 nav nav-tabs"
          role="tablist"
        >
          <a
            aria-selected="true"
            class="nav-item nav-link active"
            data-rb-event-key="inReview"
            href="#"
            role="tab"
          >
            Pending approval (1)
          </a>
        </nav>
        <div
          class="tab-content"
        >
          <div
            aria-hidden="false"
            class="fade tab-pane active show"
            role="tabpanel"
          >
             
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Given the AccountDatasetsTabs component when team is not admin Then matches the previous snapshot 1`] = `
<div>
  <div
    class="tabsBackground mb-0"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-12 col-sm-12"
      >
        <nav
          class="dataAccessTabs gray700-13 nav nav-tabs"
          role="tablist"
        >
          <a
            aria-selected="false"
            class="nav-item nav-link"
            data-rb-event-key="active,draft"
            href="#"
            role="tab"
          >
            Active (5)
          </a>
          <a
            aria-selected="true"
            class="nav-item nav-link active"
            data-rb-event-key="inReview"
            href="#"
            role="tab"
          >
            Pending approval (1)
          </a>
          <a
            aria-selected="false"
            class="nav-item nav-link"
            data-rb-event-key="rejected"
            href="#"
            role="tab"
          >
            Rejected (3)
          </a>
          <a
            aria-selected="false"
            class="nav-item nav-link"
            data-rb-event-key="archive"
            href="#"
            role="tab"
          >
            Archived (4)
          </a>
        </nav>
        <div
          class="tab-content"
        >
          <div
            aria-hidden="true"
            class="fade tab-pane"
            role="tabpanel"
          >
             
          </div>
          <div
            aria-hidden="false"
            class="fade tab-pane active show"
            role="tabpanel"
          >
             
          </div>
          <div
            aria-hidden="true"
            class="fade tab-pane"
            role="tabpanel"
          >
             
          </div>
          <div
            aria-hidden="true"
            class="fade tab-pane"
            role="tabpanel"
          >
             
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
